--- a/es.lproj/Localizable.strings
+++ b/es.lproj/Localizable.strings
@@ -140,7 +140,7 @@
 "Elements creates an 'Elements' folder in your Dropbox to hold your data.  Drop any text file you want to edit on your device in there." = "Elements crea una carpeta 'Elements' en Dropbox para conservar sus datos. Arrastre y suelte cualquier archivo que quiera editar en su dispositivo en esta carpeta.";
 
 /* No comment provided by engineer. */
-"Elements stores your files your files on Dropbox in the /Elements folder by default. Do you want to select a different folder? " = "Elements guarda por defecto los archivos en Dropbox en la carpeta /Elements. ¿Desea seleccionar una carpeta distinta?";
+"Elements stores your files on Dropbox in the /Elements folder by default. Do you want to select a different folder? " = "Elements guarda por defecto los archivos en Dropbox en la carpeta /Elements. ¿Desea seleccionar una carpeta distinta?";
 
 /* No comment provided by engineer. */
 "Email" = "Correo electrónico";
@@ -440,9 +440,6 @@
 "Tap here to signup for Dropbox" = "Toque aquí para registrarse en Dropbox";
 
 /* No comment provided by engineer. */
-"Text Color" = "Color del texto";
-
-/* No comment provided by engineer. */
 "Text Size" = "Tamaño del texto";
 
 /* No comment provided by engineer. */
@@ -456,6 +453,9 @@
 
 /* No comment provided by engineer. */
 "The scratchpad is a great place to jot down quick ideas, store paragraphs you want to get out of the way, or just make a note for yourself later on." = "El bloc de notas es un gran lugar para anotar ideas, guardar párrafos que desea eliminar del texto, o simplemente anotar conceptos para otro momento.";
+
+/* No comment provided by engineer. */
+"Theme" = "Theme";
 
 /* No comment provided by engineer. */
 "Too many notes." = "Demasiadas notas";
@@ -519,3 +519,4 @@
 
 /* No comment provided by engineer. */
 "Your device is not allowed to send mail" = "Su dispositivo no está autorizado para enviar correo";
+
