--- a/es.lproj/Localizable.strings
+++ b/es.lproj/Localizable.strings
@@ -35,7 +35,7 @@
 "Are you sure you want to change the folder on Dropbox that Elements syncs to?" = "¿Está seguro de que desea modificar la carpeta de Dropbox que sincroniza Elements?";
 
 /* No comment provided by engineer. */
-"Are you sure you want to clear your Scratchpad?" = "¿Está seguro de que desea limpiar el bloc de notas?";
+"Are you sure you want to clear your Scratchpad?" = "¿Está seguro de que desea vaciar el bloc de notas?";
 
 /* No comment provided by engineer. */
 "Are you sure you want to sign out?" = "¿Está seguro de que desea cerrar sesión?";
@@ -146,10 +146,10 @@
 "Email" = "Correo electrónico";
 
 /* No comment provided by engineer. */
-"email document" = "enviar documento por correo";
+"email document" = "enviar documento por correo electrónico";
 
 /* No comment provided by engineer. */
-"Email File" = "Enviar por correo";
+"Email File" = "Enviar archivo por correo electrónico";
 
 /* No comment provided by engineer. */
 "Enabling logging will output of all the sync operations Elements does to your device's console." = "La activación del registro enviará todas las operaciones de sincronización realizadas por Elements a la consola de su dispositivo.";
@@ -398,7 +398,7 @@
 "Show Extensions" = "Mostrar extensiones";
 
 /* No comment provided by engineer. */
-"Show login screen instead" = "Mostrar la pantalla de inicio de sesión en su lugar";
+"Show login screen instead" = "Mostrar la pantalla de inicio de sesión";
 
 /* No comment provided by engineer. */
 "show markdown preview" = "mostrar la vista previa de markdown";
@@ -413,7 +413,7 @@
 "Sign out" = "Cerrar sesión";
 
 /* No comment provided by engineer. */
-"Sign Out" = "Sign Out";
+"Sign Out" = "Cerrar sesión";
 
 /* No comment provided by engineer. */
 "Signing In To Dropbox" = "Inicio de sesión en Dropbox";
@@ -449,7 +449,7 @@
 "The content is invalid." = "El contenido es inválido";
 
 /* No comment provided by engineer. */
-"The Scratchpad is a great place to jot down quick ideas, store paragraphs you want to get out of the way, or just make a note for yourself later on." = "El bloc de notas es un gran lugar para anotar ideas, guardar párrafos que desea eliminar del texto, o simplemente anotar conceptos para otro momento.";
+"The Scratchpad is a great place to jot down quick ideas, store paragraphs you want to get out of the way, or just make a note for yourself later on." = "El bloc de notas es un lugar perfecto para anotar ideas breves, almacenar párrafos para más tarde o tomar notas en cualquier momento.";
 
 /* No comment provided by engineer. */
 "Theme" = "Tema";
